objects/PMC_SS_StatisticalBaselineForecastData__c.object
<CustomObject>
    <description>Created this object for Advanced Account Forecasting</description>
    <fields>
        <fullName>PMC_SS_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountUOMConvertedQuantity__c</fullName>
        <description>DO NOT USE</description>
        <label>Account UOM Converted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
        <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_FinalQuantity__c</fullName>
        <label>Final Forecast Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
        <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_O9AccountManagerId__c</fullName>
        <description>Field to store the unique Id for account manager</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Manager ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_O9CustomerNumber__c</fullName>
        <description>Field stores the unique customer identifier for Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_O9LocationNumber__c</fullName>
        <description>Filed to store unique identifier for Location.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_O9ProductNumber__c</fullName>
        <description>Field to store the unique identifier for Product</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_PeriodDate__c</fullName>
        <description>Date of the periods this statistical baseline forecast is part of.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
        <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
        <description>Field to store the account UOM converted value of Quantity.</description>
        <formula>IF(  AND( 
         OR(PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
            PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
         PMC_SS_UnitofMeasure__r.Name ==  PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name), 
         PMC_SS_Quantity__c , 
         IF( AND(PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos;, PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         PMC_SS_Quantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos;, PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
            PMC_SS_Quantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
            0) ) )</formula>
        <label>Quantity (Account’s UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Quantity__c</fullName>
        <description>Quantity received from o9</description>
        <label>Statistical Forecast Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnconstrainedCDPQuantity__c</fullName>
        <label>Unconstrained CDP Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit of Measure</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
        <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Statistical Baseline Forecast Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PMC_SS_Product__c</columns>
        <columns>PMC_SS_Account__c</columns>
        <columns>PMC_SS_Location__c</columns>
        <columns>PMC_SS_AccountManager__c</columns>
        <columns>PMC_SS_PeriodDate__c</columns>
        <columns>PMC_SS_UnitofMeasure__c</columns>
        <columns>PMC_SS_Quantity__c</columns>
        <columns>PMC_SS_FinalQuantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Stat_Baselines</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PMC_SS_FinalQuantity__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My Stat Baselines</label>
    </listViews>
    <nameField>
        <displayFormat>SBF-{00000}</displayFormat>
        <label>Statistical Baseline Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistical Baseline Forecast Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>